--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(cppfront REQUIRED)
 
 add_executable(main src/main.cpp2)
 
-cppfront_generate_cpp(cpp1headers src/inc/color.h2 src/inc/vec3.h2 src/inc/ray.h2)
+set(cpp2headers src/inc/sphere.h2 src/inc/color.h2 src/inc/vec3.h2 src/inc/ray.h2 src/inc/hittable.h2)
+
+cppfront_generate_cpp(cpp1headers ${cpp2headers})
 
 target_sources(main PUBLIC ${cpp1headers})
